build(webpack build): webpack configured to build and start dev-server
+ postcss added
+ index.hbs added

--- a/src/assets/index.hbs
+++ b/src/assets/index.hbs
@@ -10,6 +10,8 @@
   <link rel="manifest" href="assets/favicons/manifest.json">
   <link rel="shortcut icon" href="assets/favicons/favicon.ico">
 
+  <link href='assets/stylesheets/index.css' rel='stylesheet' />
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="msapplication-TileColor" content="#da532c">
@@ -20,5 +22,6 @@
   <h1>Welcome to my website</h1>
   <p>Now hosted on Amazon S3!</p>
   <p>Now deployed via CodePipeline!</p>
+  <script type="text/javascript" src="assets/bundle.js"></script>
 </body>
 </html>
