--- a/src/assets/index.hbs
+++ b/src/assets/index.hbs
@@ -24,18 +24,15 @@
   <meta name="msapplication-config" content="assets/favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,Array.prototype.includes"></script>
   <script
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"
   ></script>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.{{NODE_ENV}}.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.{{NODE_ENV}}.js"></script>
-
 </head>
 <body>
-  <h1>Welcome to my website</h1>
-  <p>Now hosted on Amazon S3!</p>
-  <p>Now deployed via CodePipeline!</p>
   <div id="app-root"></div>
   <script type="text/javascript" src="assets/bundle.js"></script>
 </body>
