--- a/src/assets/index.hbs
+++ b/src/assets/index.hbs
@@ -17,6 +17,12 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
     crossorigin="anonymous"
   >
+  <link
+    href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    crossorigin="anonymous"
+  >
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -31,6 +37,7 @@
   ></script>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.{{NODE_ENV}}.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.{{NODE_ENV}}.js"></script>
+  <script crossorigin src="https://unpkg.com/moment@2.24.0"></script>
 </head>
 <body>
   <div id="app-root"></div>
