--- a/src/assets/stylesheets/reset.css
+++ b/src/assets/stylesheets/reset.css
@@ -18,6 +18,7 @@ body {
   color: inherit;
   background: transparent;
   min-width: 320px;
+  font-size: 1.5rem !important;
 }
 
 a {
@@ -27,8 +28,7 @@ a {
 
 ul, ol {
   margin: 0;
-  padding: 0;
-  list-style: none;
+  padding-inline-start: 30px;
 }
 
 blockquote {
