feat(content): fixed meny scroll to id

--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -1,1 +1,9 @@
 @import "reset.css";
+
+section[id]:before {
+    display: block;
+    height: 65px;
+    margin-top: -65px;
+    visibility: hidden;
+    content: "";
+}
