feat(content): added soft-skills

--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -1,9 +1,15 @@
 @import "reset.css";
 
-section[id]:before {
+section:before {
     display: block;
     height: 65px;
     margin-top: -65px;
     visibility: hidden;
     content: "";
+}
+
+table,
+tr,
+td {
+    border: none !important;
 }
