feat(content): fix table spacer

--- a/src/assets/index.hbs
+++ b/src/assets/index.hbs
@@ -32,6 +32,8 @@
   <script crossorigin src="https://unpkg.com/react@16/umd/react.{{NODE_ENV}}.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.{{NODE_ENV}}.js"></script>
   <script crossorigin src="https://unpkg.com/moment@2.24.0"></script>
+  <script crossorigin src="https://unpkg.com/jquery@3.4.1/dist/jquery.min.js"></script>
+  <script crossorigin src="https://unpkg.com/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
   <div id="app-root"></div>
