--- a/src/assets/index.hbs
+++ b/src/assets/index.hbs
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" class="no-js">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157725698-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-157725698-1');
+  </script>
+
   <title>My Website Home Page</title>
   <base href="/">
 
@@ -29,8 +39,8 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"
   ></script>
 
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.{{NODE_ENV}}.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.{{NODE_ENV}}.js"></script>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.{{scriptEnvSuffix}}.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.{{scriptEnvSuffix}}.js"></script>
   <script crossorigin src="https://unpkg.com/moment@2.24.0"></script>
   <script crossorigin src="https://unpkg.com/jquery@3.4.1/dist/jquery.min.js"></script>
   <script crossorigin src="https://unpkg.com/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
@@ -38,5 +48,13 @@
 <body>
   <div id="app-root"></div>
   <script type="text/javascript" src="assets/bundle.js"></script>
+  <script>
+    $('.navbar-nav .nav-item').on('click', function(){
+      $('.navbar-collapse').collapse('hide');
+    });
+    $('.navbar-brand').on('click', function(){
+      $('.navbar-collapse').collapse('hide');
+    });
+  </script>
 </body>
 </html>
