--- a/src/assets/index.hbs
+++ b/src/assets/index.hbs
@@ -14,11 +14,11 @@
   <title>My Website Home Page</title>
   <base href="/">
 
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
-  <link rel="manifest" href="assets/favicons/manifest.json">
-  <link rel="shortcut icon" href="assets/favicons/favicon.ico">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+  <link rel="manifest" href="favicons/manifest.json">
+  <link rel="shortcut icon" href="favicons/favicon.ico">
 
   <link href='assets/stylesheets/index.css' rel='stylesheet' />
   <link
@@ -31,7 +31,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-config" content="assets/favicons/browserconfig.xml">
+  <meta name="msapplication-config" content="favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,Array.prototype.includes"></script>
   <script
@@ -47,7 +47,7 @@
 </head>
 <body>
   <div id="app-root"></div>
-  <script type="text/javascript" src="assets/bundle.js"></script>
+  <script type="text/javascript" src="bundle.js"></script>
   <script>
     $('.navbar-nav .nav-item').on('click', function(){
       $('.navbar-collapse').collapse('hide');
