--- a/src/assets/stylesheets/reset.css
+++ b/src/assets/stylesheets/reset.css
@@ -19,6 +19,10 @@ body {
   background: transparent;
   min-width: 320px;
 
+  @media screen and (max-device-width: 375px) {
+    font-size: 0.8rem !important;
+  };
+
   @media screen and (min-device-width: 376px) and (max-device-width: 768px) {
     font-size: 1rem !important;
   };
