--- a/src/assets/index.hbs
+++ b/src/assets/index.hbs
@@ -11,7 +11,7 @@
     gtag("config", "UA-157725698-1");
   </script>
 
-  <title>My Website Home Page</title>
+  <title>Oleksii Honchar</title>
   <base href="./">
 
   <link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-touch-icon.png">
