refactor(content): seo & images optimisation
* images minified
+ SEO tags added, headers fixed
* hard skills to float
left on small resolution

--- a/src/assets/index.hbs
+++ b/src/assets/index.hbs
@@ -11,7 +11,18 @@
     gtag("config", "UA-157725698-1");
   </script>
 
-  <title>Oleksii Honchar</title>
+  <meta name="title" content="Oleksii Honchar Full cycle Software Engineer Personal Page">
+  <meta name="description" content="On this personal page you can find detailed description of my software engineering path, past work experience, my expertise and toolset.">
+  <meta name="keywords" content="Web application, Software development, Software Architecture, Typescript, JavaScript, Angular-js, React-js, Node-js, Single Page Application, Software engineer, Application Architecture, Chief Technology Officer, Technology Lead, Frontend, Backend, Frontend Framework, Enterprise solutions, Agile Software Development, Team Lead, Frontend Architect">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="favicons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+
   <base href="./">
 
   <link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-touch-icon.png">
@@ -28,11 +39,6 @@
     crossorigin="anonymous"
   >
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-config" content="favicons/browserconfig.xml">
-  <meta name="theme-color" content="#ffffff">
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,Array.prototype.includes"></script>
   <script
     type="text/javascript"
