style(seo): tags optimization
+ add poster image for og

--- a/src/assets/index.hbs
+++ b/src/assets/index.hbs
@@ -11,6 +11,7 @@
     gtag("config", "UA-157725698-1");
   </script>
 
+  <title>Oleksii Honchar Full cycle Software Engineer Personal Page</title>
   <meta name="title" content="Oleksii Honchar Full cycle Software Engineer Personal Page">
   <meta name="description" content="On this personal page you can find detailed description of my software engineering path, past work experience, my expertise and toolset.">
   <meta name="keywords" content="Web application, Software development, Software Architecture, Typescript, JavaScript, Angular-js, React-js, Node-js, Single Page Application, Software engineer, Application Architecture, Chief Technology Officer, Technology Lead, Frontend, Backend, Frontend Framework, Enterprise solutions, Agile Software Development, Team Lead, Frontend Architect">
@@ -18,6 +19,21 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
   <meta charset="UTF-8">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://oleksiihonchar.com/">
+  <meta property="og:title" content="Oleksii Honchar Full cycle Software Engineer Personal Page">
+  <meta property="og:description" content="On this personal page you can find detailed description of my software engineering path, past work experience, my expertise and toolset.">
+  <meta property="og:image" content="https://oleksiihonchar.com/images/poster-og.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://oleksiihonchar.com/">
+  <meta property="twitter:title" content="Oleksii Honchar Full cycle Software Engineer Personal Page">
+  <meta property="twitter:description" content="On this personal page you can find detailed description of my software engineering path, past work experience, my expertise and toolset.">
+  <meta property="twitter:image" content="https://oleksiihonchar.com/images/poster-og.jpg">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="favicons/browserconfig.xml">
