build(mjs + es15 splitting config): make polyfill nomodule

--- a/src/assets/index.hbs
+++ b/src/assets/index.hbs
@@ -55,13 +55,14 @@
     crossorigin="anonymous"
   >
 
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,Array.prototype.includes"></script>
   <script
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"
   ></script>
 
   <script src="scripts/safari-nomodule.js"></script>
+
+  <script nomodule src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,Array.prototype.includes"></script>
 
   <script crossorigin src="https://unpkg.com/react@16/umd/react.{{scriptEnvSuffix}}.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.{{scriptEnvSuffix}}.js"></script>
