--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -6,6 +6,7 @@ html {
 
 body {
   font-family: 'Helvetica Neue', sans-serif !important;
+  line-height: 1.4rem;
 }
 
 section:before {
@@ -20,4 +21,32 @@ table,
 tr,
 td {
   border: none !important;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.3rem;
+}
+
+h4 {
+  font-size: 1.1rem;
+}
+
+h5 {
+  font-size: 1rem;
+}
+
+h6 {
+  font-size: 1rem;
+}
+
+ul {
+  padding-inline-start: 1.5rem;
 }
