--- a/src/assets/index.hbs
+++ b/src/assets/index.hbs
@@ -14,7 +14,7 @@
   <title>Oleksii Honchar Full cycle Software Engineer Personal Page</title>
   <meta name="title" content="Oleksii Honchar Full cycle Software Engineer Personal Page">
   <meta name="description" content="On this personal page you can find detailed description of my software engineering path, past work experience, my expertise and toolset.">
-  <meta name="keywords" content="Web application, Software development, Software Architecture, Typescript, JavaScript, Angular-js, React-js, Node-js, Single Page Application, Software engineer, Application Architecture, Chief Technology Officer, Technology Lead, Frontend, Backend, Frontend Framework, Enterprise solutions, Agile Software Development, Team Lead, Frontend Architect">
+  <meta name="keywords" content="Web application, Software development, Software Architecture, Typescript, JavaScript, Angular-js, React-js, Node-js, Single Page Application, Software engineer, Application Architecture, Technology Lead, Senior Staff Engineer, Frontend, Backend, Frontend Framework, Enterprise solutions, Agile Software Development, Team Lead, Frontend Architect">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
